cmake_minimum_required(VERSION 3.0.0)

add_subdirectory(PerformanceStatistics)
add_subdirectory(Utility)
add_subdirectory(01_Currency)
add_subdirectory(01_Fibonacci)
add_subdirectory(01_Permutation)
add_subdirectory(01_Queen)
add_subdirectory(01_Subset)
add_subdirectory(02_BinarySearch)
add_subdirectory(02_BubbleSort)
add_subdirectory(02_InsertionSort)
add_subdirectory(02_RankSort)
add_subdirectory(02_SelectionSort)
add_subdirectory(03_DoublyLinkedCircularList)
add_subdirectory(03_LinearList)
add_subdirectory(03_SimulatedPointer)
add_subdirectory(03_SinglyLinkedList)
add_subdirectory(04_Array)
add_subdirectory(04_Matrix)
add_subdirectory(04_SparseMatrix)
add_subdirectory(04_SparseMatrixLinked)
add_subdirectory(04_SparseMatrixStdList)
add_subdirectory(05_StackLinearList)
add_subdirectory(05_StackLinkedList)
add_subdirectory(05_StackLinkedListCustomized)
add_subdirectory(06_LinearQueue)
add_subdirectory(06_LinkedListQueue)